# mcp-gerard

./: .env.example  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  PKGBUILD  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: email-oauth2-setup.md  python-sdk.md
docs/research/: thinking-reasoning-features.md
examples/: email-style.yml
scripts/: bump_version.py  convert_group_yaml_to_notes.py  generate_tool_schemas.py  prevent-master-commit.sh  prevent-master-push.sh  scrub_vcr_tokens.py
src/mcp_gerard/: __init__.py  __main__.py  blog.py  overleaf.py  projects.py  tool_schemas.json  vault.py
src/mcp_handley_lab/: __init__.py  __main__.py  tool_schemas.json
tests/: README.md  conftest.py  test_common_charts.py  test_email_extraction.py  test_email_move_unit.py  test_email_style.py  test_mathematica_integration.py  test_mathematica_unit.py  test_sandbox.py
tests/common/: test_render_errors.py
tests/excel/: __init__.py  test_excel_charts.py  test_excel_comments.py  test_excel_dates.py  test_excel_edit_ops.py  test_excel_filtering.py  test_excel_formatting.py  test_excel_formula_refactor.py  test_excel_names.py  test_excel_ops.py  test_excel_package.py  test_excel_pivots.py  test_excel_print_settings.py  test_excel_properties.py  test_excel_protection.py  test_excel_required_params.py  test_excel_sizing.py  test_excel_styles_write.py  test_excel_tables.py  test_excel_validation.py  test_find_replace.py
tests/fixtures/: README.md  ci_test_setup.md  oauth2_setup.md
tests/integration/: test_arxiv.py  test_arxiv_unhappy_paths.py  test_code2prompt_integration.py  test_email_integration.py  test_email_move_integration.py  test_gemini_deep_research_integration.py  test_gemini_embeddings_integration.py  test_gemini_mime_integration.py  test_google_calendar_enhanced_api.py  test_google_calendar_integration.py  test_google_calendar_real_world_scenarios.py  test_google_calendar_timezone_integration.py  test_google_calendar_unhappy_paths.py  test_google_maps_integration.py  test_gpt5_integration.py  test_groq_integration.py  test_image_generation_integration.py  test_list_models_integration.py  test_llm_integration.py  test_llm_unhappy_paths.py  test_mistral_integration.py  test_mutt_cli_integration.py  test_mutt_file_integration.py  test_mutt_integration.py  test_mutt_workflows.py  test_openai_embeddings_integration.py  test_otter_integration.py  test_py2nb_integration.py  test_system_prompt_integration.py  test_vim_integration.py
tests/messenger/: test_commands.py
tests/powerpoint/: __init__.py  test_powerpoint_charts.py  test_powerpoint_group.py  test_powerpoint_integration.py  test_powerpoint_ops.py
tests/unit/: test_blog.py  test_claude_transcript.py  test_claude_unit.py  test_common_unit.py  test_email_search.py  test_gemini_mime_handling.py  test_gemini_unit.py  test_google_calendar_enhanced_parsing.py  test_google_calendar_idiot_proof.py  test_google_calendar_recurring.py  test_google_calendar_search.py  test_google_calendar_timezone.py  test_google_maps_unit.py  test_grok_unit.py  test_image_generation_metadata_unit.py  test_llm_common_unit.py  test_llm_output_file_handling.py  test_llm_provider_wiring.py  test_llm_shared_unit.py  test_memory_unit.py  test_mistral_unit.py  test_model_loader.py  test_mutt_filesystem_operations.py  test_mutt_internal_unit.py  test_openai_unit.py  test_otter_formatting.py  test_overleaf.py  test_projects.py  test_py2nb_unit.py  test_search_claude.py  test_search_common.py  test_system_prompt_unit.py  test_vault.py
tests/visio/: test_visio_ops.py
tests/word/: test_batch_operations.py  test_nested_tables.py  test_render.py  test_text_fragmentation.py  (+8 more)
(+647 files in other folders)
